https://jeremenichelli.github.io/2015/07/building-blog-jekyll-creating-layouts/

--- a/_layouts/_default.html
+++ b/_layouts/_default.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     {% include head.html %}
+    <meta name="description" content="{{ site.description }}">
     {% seo %}
   </head>
 </html>
